feat(chat): display chat in realtime

--- a/app/views/chat/_message.html.erb
+++ b/app/views/chat/_message.html.erb
@@ -1,8 +1,12 @@
-<div class="chat chat-end">
+<% css_class = message.sender_role == 'assistant' ? 'flex chat chat-start' : 'chat chat-end' %>
+
+<div class="<%= css_class %>">
   <div class="chat-image avatar">
     <div class="w-10 rounded-full">
       <img alt="Tailwind CSS chat bubble component" src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />
     </div>
   </div>
-  <div class="chat-bubble"><%= message.message_text %></div>
+  <div class="chat-bubble" id="<%= dom_id(message) %>">
+    <%= message.message_text %>
+  </div>
 </div>
