--- a/app/views/chat/create.turbo_stream.erb
+++ b/app/views/chat/create.turbo_stream.erb
@@ -1,1 +1,5 @@
-<%#= turbo_stream.prepend 'messages', partial: 'chat/message', locals: { message: @chat_message } %>
+<%= turbo_stream.append 'messages', partial: 'chat/message', locals: { message: @chat_message } %>
+
+<% if @chat_session.chat_messages.count == 1 %>
+  <%= turbo_stream.remove 'start_conversation' %>
+<% end %>
