--- a/app/views/chat/_prompt_messages.html.erb
+++ b/app/views/chat/_prompt_messages.html.erb
@@ -1,24 +1,7 @@
 <div
-  class="flex-1 space-y-6 min-h-[75vh] h-3/4 overflow-y-auto rounded-xl bg-slate-200 p-4 text-sm leading-6 text-slate-900 shadow-sm dark:bg-slate-900 dark:text-slate-300 sm:text-base sm:leading-7"
+  class="flex-1 space-y-6 max-h-[75vh] h-3/4 overflow-y-auto rounded-xl bg-slate-200 p-4 text-sm leading-6 text-slate-900 shadow-sm dark:bg-slate-900 dark:text-slate-300 sm:text-base sm:leading-7"
   data-controller="chat"
 >
-<!--  <div class="flex chat chat-start">-->
-<!--    <div class="chat-image avatar">-->
-<!--      <div class="w-10 rounded-full">-->
-<!--        <img alt="Tailwind CSS chat bubble component" src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    <div class="chat-bubble">It was said that you would, destroy the Sith, not join them.</div>-->
-<!--  </div>-->
-<!--  <div class="chat chat-end">-->
-<!--    <div class="chat-image avatar">-->
-<!--      <div class="w-10 rounded-full">-->
-<!--        <img alt="Tailwind CSS chat bubble component" src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    <div class="chat-bubble">Not leave it in Darkness</div>-->
-<!--  </div>-->
-
   <% if @chat_messages.empty? %>
     <div id="start_conversation" class="flex justify-center items-center h-full">
       <p class="text-center text-lg font-semibold">我可以如何帮助你？</p>
