--- a/app/views/chat/_prompt_messages.html.erb
+++ b/app/views/chat/_prompt_messages.html.erb
@@ -1,5 +1,5 @@
 <div
-  class="flex-1 space-y-6 max-h-[75vh] h-3/4 overflow-y-auto rounded-xl bg-slate-200 p-4 text-sm leading-6 text-slate-900 shadow-sm dark:bg-slate-900 dark:text-slate-300 sm:text-base sm:leading-7"
+  class="flex-1 space-y-6 h-[75vh] overflow-y-auto rounded-xl bg-slate-200 p-4 text-sm leading-6 text-slate-900 shadow-sm dark:bg-slate-900 dark:text-slate-300 sm:text-base sm:leading-7"
   data-controller="chat"
 >
   <% if @chat_messages.empty? %>
