--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,5 +1,7 @@
 <div class="p-4 mx-auto md:w-3/4 sm:p-2">
   <h1 class="text-3xl font-bold mb-4">AI 唐韧</h1>
-  <%= render "prompt_messages" %>
-  <%= render "prompt_input" %>
+  <div data-controller="chat">
+    <%= render "prompt_messages" %>
+    <%= render "prompt_input" %>
+  </div>
 </div>
