--- a/app/views/chat/create.turbo_stream.erb
+++ b/app/views/chat/create.turbo_stream.erb
@@ -2,4 +2,5 @@
   <%= turbo_stream.remove 'start_conversation' %>
 <% end %>
 
-<%= turbo_stream.append 'messages', partial: 'chat/message', locals: { message: @chat_message } %>
+
+<%#= turbo_stream.append 'messages', partial: 'chat/message', locals: { message: @chat_message } %>
