--- a/app/views/resumes/_navigation_form.html.erb
+++ b/app/views/resumes/_navigation_form.html.erb
@@ -1,41 +1,68 @@
+<!--Navigation Steps -->
 <div class="lg:border-b lg:border-t lg:border-gray-200">
   <nav class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8" aria-label="Progress">
     <ol role="list" class="overflow-hidden rounded-md lg:flex lg:rounded-none lg:border-l lg:border-r lg:border-gray-200">
       <li class="relative overflow-hidden lg:flex-1">
         <div class="overflow-hidden border border-gray-200 rounded-t-md border-b-0 lg:border-0">
-          <!-- Completed Step -->
-          <a href="#" class="group">
-            <span class="absolute left-0 top-0 h-full w-1 bg-transparent group-hover:bg-gray-200 lg:bottom-0 lg:top-auto lg:h-1 lg:w-full" aria-hidden="true"></span>
-            <span class="flex items-start px-6 py-5 text-sm font-medium">
-              <span class="flex-shrink-0">
-                <span class="flex h-10 w-10 items-center justify-center rounded-full bg-indigo-600">
-                  <svg class="h-6 w-6 text-white" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                    <path fill-rule="evenodd" d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z" clip-rule="evenodd" />
-                  </svg>
-                </span>
-              </span>
-              <span class="ml-4 mt-0.5 flex min-w-0 flex-col">
-                <span class="text-sm font-medium">Job Details</span>
-                <span class="text-sm font-medium text-gray-500">Vitae sed mi luctus laoreet.</span>
-              </span>
-            </span>
-          </a>
-        </div>
-      </li>
-      <li class="relative overflow-hidden lg:flex-1">
-        <div class="overflow-hidden border border-gray-200 lg:border-0">
-          <!-- Current Step -->
           <a href="#" aria-current="step">
             <span class="absolute left-0 top-0 h-full w-1 bg-indigo-600 lg:bottom-0 lg:top-auto lg:h-1 lg:w-full" aria-hidden="true"></span>
             <span class="flex items-start px-6 py-5 text-sm font-medium lg:pl-9">
               <span class="flex-shrink-0">
                 <span class="flex h-10 w-10 items-center justify-center rounded-full border-2 border-indigo-600">
-                  <span class="text-indigo-600">02</span>
+                  <span class="text-indigo-600">01</span>
                 </span>
               </span>
               <span class="ml-4 mt-0.5 flex min-w-0 flex-col">
-                <span class="text-sm font-medium text-indigo-600">Application form</span>
-                <span class="text-sm font-medium text-gray-500">Cursus semper viverra.</span>
+                <span class="text-sm font-medium text-indigo-600">上传简历</span>
+                <span class="text-sm font-medium text-gray-500">汪呜！等你的简历！🐾</span>
+              </span>
+            </span>
+          </a>
+          <!-- Separator -->
+          <div class="absolute inset-0 left-0 top-0 hidden w-3 lg:block" aria-hidden="true">
+            <svg class="h-full w-full text-gray-300" viewBox="0 0 12 82" fill="none" preserveAspectRatio="none">
+              <path d="M0.5 0V31L10.5 41L0.5 51V82" stroke="currentcolor" vector-effect="non-scaling-stroke" />
+            </svg>
+          </div>
+        </div>
+      </li>
+      <li class="relative overflow-hidden lg:flex-1">
+        <div class="overflow-hidden border border-gray-200 lg:border-0">
+          <a href="#" class="group">
+            <span class="absolute left-0 top-0 h-full w-1 bg-transparent group-hover:bg-gray-200 lg:bottom-0 lg:top-auto lg:h-1 lg:w-full" aria-hidden="true"></span>
+            <span class="flex items-start px-6 py-5 text-sm font-medium lg:pl-9">
+              <span class="flex-shrink-0">
+                <span class="flex h-10 w-10 items-center justify-center rounded-full border-2 border-gray-300">
+                  <span class="text-gray-500">02</span>
+                </span>
+              </span>
+              <span class="ml-4 mt-0.5 flex min-w-0 flex-col">
+                <span class="text-sm font-medium text-gray-500">简历预览</span>
+                <span class="text-sm font-medium text-gray-500">确认你的简历信息🔍</span>
+              </span>
+            </span>
+          </a>
+          <!-- Separator -->
+          <div class="absolute inset-0 left-0 top-0 hidden w-3 lg:block" aria-hidden="true">
+            <svg class="h-full w-full text-gray-300" viewBox="0 0 12 82" fill="none" preserveAspectRatio="none">
+              <path d="M0.5 0V31L10.5 41L0.5 51V82" stroke="currentcolor" vector-effect="non-scaling-stroke" />
+            </svg>
+          </div>
+        </div>
+      </li>
+      <li class="relative overflow-hidden lg:flex-1">
+        <div class="overflow-hidden border border-gray-200 lg:border-0">
+          <a href="#" class="group">
+            <span class="absolute left-0 top-0 h-full w-1 bg-transparent group-hover:bg-gray-200 lg:bottom-0 lg:top-auto lg:h-1 lg:w-full" aria-hidden="true"></span>
+            <span class="flex items-start px-6 py-5 text-sm font-medium lg:pl-9">
+              <span class="flex-shrink-0">
+                <span class="flex h-10 w-10 items-center justify-center rounded-full border-2 border-gray-300">
+                  <span class="text-gray-500">03</span>
+                </span>
+              </span>
+              <span class="ml-4 mt-0.5 flex min-w-0 flex-col">
+                <span class="text-sm font-medium text-gray-500">修改建议</span>
+                <span class="text-sm font-medium text-gray-500">产品面试官给建议💡</span>
               </span>
             </span>
           </a>
@@ -55,12 +82,12 @@
             <span class="flex items-start px-6 py-5 text-sm font-medium lg:pl-9">
               <span class="flex-shrink-0">
                 <span class="flex h-10 w-10 items-center justify-center rounded-full border-2 border-gray-300">
-                  <span class="text-gray-500">03</span>
+                  <span class="text-gray-500">04</span>
                 </span>
               </span>
               <span class="ml-4 mt-0.5 flex min-w-0 flex-col">
-                <span class="text-sm font-medium text-gray-500">Preview</span>
-                <span class="text-sm font-medium text-gray-500">Penatibus eu quis ante.</span>
+                <span class="text-sm font-medium text-gray-500">定制简历</span>
+                <span class="text-sm font-medium text-gray-500">让你更有吸引力💗</span>
               </span>
             </span>
           </a>
@@ -76,11 +103,12 @@
   </nav>
 </div>
 
+<!--Resume Form-->
 <div class="space-y-10 divide-y divide-gray-900/10 mt-4">
   <div class="grid grid-cols-1 gap-x-8 gap-y-8 md:grid-cols-3">
     <div class="px-4 sm:px-0">
-      <h2 class="text-base font-semibold leading-7 text-gray-900">Profile</h2>
-      <p class="mt-1 text-sm leading-6 text-gray-600">This information will be displayed publicly so be careful what you share.</p>
+      <h2 class="text-base font-semibold leading-7 text-gray-900">简历信息</h2>
+      <p class="mt-1 text-sm leading-6 text-gray-600">请上传你的简历</p>
     </div>
 
     <form class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
@@ -99,17 +127,16 @@
                     <span>上传简历</span>
                     <input id="file-upload" name="file-upload" type="file" class="sr-only">
                   </label>
-                  <p class="pl-1">或者拖拽</p>
+                  <p class="pl-1">或者拖拽至此</p>
                 </div>
-                <p class="text-xs leading-5 text-gray-600">PDF, DOCX 最大 10MB</p>
+                <p class="text-xs leading-5 text-gray-600">支持 PDF, DOCX 最大 10MB</p>
               </div>
             </div>
           </div>
         </div>
       </div>
       <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
-        <button type="button" class="text-sm font-semibold leading-6 text-gray-900">Cancel</button>
-        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
+        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">下一步</button>
       </div>
     </form>
   </div>
