--- a/app/views/resumes/show.html.erb
+++ b/app/views/resumes/show.html.erb
@@ -1,4 +1,1 @@
-<div>
-  <h1 class="font-bold text-4xl">Resumes#show</h1>
-  <p>Find me in app/views/resumes/show.html.erb</p>
-</div>
+<%= render "page" %>
