chore(resume): resume preview

--- a/app/views/resumes/_navigation_form.html.erb
+++ b/app/views/resumes/_navigation_form.html.erb
@@ -286,12 +286,47 @@
   <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
     <div class="px-4 sm:px-0">
       <h2 class="text-base font-semibold leading-7 text-gray-900">优化简历</h2>
-      <p class="mt-1 text-sm leading-6 text-gray-600">XXXXXX</p>
+      <p class="mt-1 text-sm leading-6 text-gray-600">TODO：将优化放在上一步骤、可以实时预览</p>
     </div>
 
     <form class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
-      <div class="px-4 py-6 sm:p-8">
-        简历展示
+<!--      <div class="px-4 py-6 sm:p-8">-->
+<!--        简历展示-->
+<!--      </div>-->
+      <div class="max-w-full mx-auto bg-white shadow-lg rounded-lg p-5 text-black">
+        <div class="mb-2">
+          <p class=""><%= @resume.name %> | <%= @resume.gender %> | 电话：<%= @resume.phone_number %> | 邮箱：<%= @resume.email %></p>
+        </div>
+        <div class="mb-2">
+          <div class="text-center border-b-2 border-gray-200 my-1">
+            <h2 class="font-bold">工作经历</h2>
+          </div>
+          <% @resume.work_experiences.each do |experience| %>
+            <div class="mt-2">
+              <!-- Title | Company | Time -->
+              <div class="flex justify-between items-center mb-2 font-bold">
+                <h3 class="flex-1 text-left"><%= experience.position %></h3>
+                <p class="flex-1 text-center"><%= experience.company %></p>
+<!--                <p class="flex-1 text-right"><%#= experience.start_date.strftime("%Y.%m") %>-<%#= experience.end_date.strftime("%Y.%m") %></p>-->
+              </div>
+              <!-- Description -->
+              <p class="space-y-1">
+                <%= experience.project_experience %>
+              </p>
+            </div>
+          <% end %>
+        </div>
+        <!-- Education Background-->
+        <div>
+          <div class="text-center border-b-2 border-gray-200 mb-1">
+            <h2 class="font-bold">教育背景</h2>
+          </div>
+          <% @resume.educations.each do |education| %>
+            <p class="mt-1">
+<!--              <%#= education.school %> | <%#= education.major %> | <%#= education.start_date.strftime("%Y.%m") %>-<%#= education.end_date.strftime("%Y.%m") %> | <%#= education.degree %>-->
+            </p>
+          <% end %>
+        </div>
       </div>
       <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
         <button type="button" class="text-sm font-semibold leading-6 text-gray-900">下一步</button>
