--- a/app/views/resumes/_navigation_form.html.erb
+++ b/app/views/resumes/_navigation_form.html.erb
@@ -307,7 +307,7 @@
               <div class="flex justify-between items-center mb-2 font-bold">
                 <h3 class="flex-1 text-left"><%= experience.position %></h3>
                 <p class="flex-1 text-center"><%= experience.company %></p>
-<!--                <p class="flex-1 text-right"><%#= experience.start_date.strftime("%Y.%m") %>-<%#= experience.end_date.strftime("%Y.%m") %></p>-->
+                <p class="flex-1 text-right"><%= experience.start_date.strftime("%Y.%m") %>-<%= experience.end_date.nil? ? "至今" : experience.end_date.strftime("%Y.%m") %></p>
               </div>
               <!-- Description -->
               <p class="space-y-1">
@@ -323,7 +323,7 @@
           </div>
           <% @resume.educations.each do |education| %>
             <p class="mt-1">
-<!--              <%#= education.school %> | <%#= education.major %> | <%#= education.start_date.strftime("%Y.%m") %>-<%#= education.end_date.strftime("%Y.%m") %> | <%#= education.degree %>-->
+              <%= education.school %> | <%= education.major %> | <%= education.start_date.strftime("%Y.%m") %>-<%= education.end_date.strftime("%Y.%m") %> | <%= education.degree %>
             </p>
           <% end %>
         </div>
