--- a/app/views/resumes/_navigation_form.html.erb
+++ b/app/views/resumes/_navigation_form.html.erb
@@ -165,7 +165,7 @@
 
   <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
     <div class="px-4 sm:px-0">
-      <h2 class="text-base font-semibold leading-7 text-gray-900">简历预览</h2>
+      <h2 class="text-base font-semibold leading-7 text-gray-900">简历编辑</h2>
       <p class="mt-1 text-sm leading-6 text-gray-600">汪汪很努力地阅读简历了，如果有不准确的地方麻麻可以教汪汪修改，汪汪会像对待三文鱼一样认真学习喔！</p>
     </div>
 
@@ -233,9 +233,12 @@
             </div>
 
             <div class="sm:col-span-6">
-              <%= work_experience_form.label :project_experience, "项目经验", class: "block text-sm font-medium leading-6 text-gray-900" %>
-              <div class="mt-2">
-                <%= work_experience_form.text_area :project_experience, rows: 4, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+              <div data-controller="resume">
+                <%= work_experience_form.label :project_experience, "项目经历", class: "block text-sm font-medium leading-6 text-gray-900" %>
+                <div class="mt-2">
+                  <button type="button" data-action="click->resume#optimizeProjectExperience" class="rounded bg-indigo-50 px-2 py-1 text-xs font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100">优化本段经历</button>
+                  <%= work_experience_form.text_area :project_experience, data: { resume_target: "projectExperience" }, rows: 8, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+                </div>
               </div>
             </div>
           </div>
@@ -278,6 +281,7 @@
         <!-- educations -->
       </div>
       <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
+        <button type="button" class="text-sm font-semibold leading-6 text-gray-900">下一步</button>
         <%= form.submit "保存", class: "rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
       </div>
     <% end %>
@@ -285,86 +289,63 @@
 
   <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
     <div class="px-4 sm:px-0">
-      <h2 class="text-base font-semibold leading-7 text-gray-900">优化简历</h2>
-      <p class="mt-1 text-sm leading-6 text-gray-600">TODO：将优化放在上一步骤、可以实时预览</p>
+      <h2 class="text-base font-semibold leading-7 text-gray-900">简历预览</h2>
+      <p class="mt-1 text-sm leading-6 text-gray-600">TODO：添加描述</p>
     </div>
 
-    <form class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
-<!--      <div class="px-4 py-6 sm:p-8">-->
-<!--        简历展示-->
-<!--      </div>-->
-      <div class="max-w-full mx-auto bg-white shadow-lg rounded-lg p-5 text-black">
-        <div class="mb-2">
-          <p class=""><%= @resume.name %> | <%= @resume.gender %> | 电话：<%= @resume.phone_number %> | 邮箱：<%= @resume.email %></p>
-        </div>
-        <div class="mb-2">
-          <div class="text-center border-b-2 border-gray-200 my-1">
-            <h2 class="font-bold">工作经历</h2>
-          </div>
-          <% @resume.work_experiences.each do |experience| %>
-            <div class="mt-2">
-              <!-- Title | Company | Time -->
-              <div class="flex justify-between items-center mb-2 font-bold">
-                <h3 class="flex-1 text-left"><%= experience.position %></h3>
-                <p class="flex-1 text-center"><%= experience.company %></p>
-                <p class="flex-1 text-right"><%= experience.start_date.strftime("%Y.%m") %>-<%= experience.end_date.nil? ? "至今" : experience.end_date.strftime("%Y.%m") %></p>
-              </div>
-              <!-- Description -->
-              <p class="space-y-1">
-                <%= experience.project_experience %>
-              </p>
-            </div>
-          <% end %>
-        </div>
-        <!-- Education Background-->
-        <div>
-          <div class="text-center border-b-2 border-gray-200 mb-1">
-            <h2 class="font-bold">教育背景</h2>
-          </div>
-          <% @resume.educations.each do |education| %>
-            <p class="mt-1">
-              <%= education.school %> | <%= education.major %> | <%= education.start_date.strftime("%Y.%m") %>-<%= education.end_date.strftime("%Y.%m") %> | <%= education.degree %>
-            </p>
-          <% end %>
-        </div>
-      </div>
+    <div class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
+      <%= render partial: "preview", locals: { resume: @resume } %>
       <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
-        <button type="button" class="text-sm font-semibold leading-6 text-gray-900">下一步</button>
-        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">优化</button>
+        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">下一步</button>
       </div>
-    </form>
+    </div>
   </div>
 
   <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
     <div class="px-4 sm:px-0">
       <h2 class="text-base font-semibold leading-7 text-gray-900">定制简历</h2>
-      <p class="mt-1 text-sm leading-6 text-gray-600">YYY</p>
+      <p class="mt-1 text-sm leading-6 text-gray-600">TODO：添加描述</p>
     </div>
 
-    <form class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
+    <div class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
       <div class="px-4 py-6 sm:p-8">
+        <div class="border-b border-gray-200 pb-5 my-4">
+          <h3 class="text-base font-semibold leading-6 text-gray-900">职位匹配生成</h3>
+        </div>
         <!-- job descriptions -->
-        <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 mt-4">
-          <div class="sm:col-span-6">
-            <label for="projects" class="block text-sm font-medium leading-6 text-gray-900">项目经验</label>
-            <div class="mt-2">
-              <textarea rows="4" name="projects" id="projects" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+        <div data-controller="resume" data-resume-id="<%= @resume.id %>">
+          <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 mt-4">
+            <div class="sm:col-span-6">
+              <label for="job-description" class="block text-sm font-medium leading-6 text-gray-900">职位 JD 内容</label>
+              <div class="mt-2">
+                <button type="button" data-action="click->resume#generateJobMatch" class="rounded bg-indigo-50 px-2 py-1 text-xs font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100">生成职位匹配</button>
+                <textarea rows="16" name="job-description" id="job-description" data-resume-target="jobDescription" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 mt-4">
-          <div class="sm:col-span-6">
-            <label for="projects" class="block text-sm font-medium leading-6 text-gray-900">职位匹配</label>
-            <div class="mt-2">
-              <textarea rows="4" name="projects" id="projects" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+          <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 mt-4">
+            <div class="sm:col-span-6">
+              <label for="job-match" class="block text-sm font-medium leading-6 text-gray-900">职位匹配</label>
+              <div class="mt-2">
+                <textarea rows="8" name="job-match" id="job-match" data-resume-target="jobMatch" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+              </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
+    <div class="px-4 sm:px-0">
+      <h2 class="text-base font-semibold leading-7 text-gray-900">简历预览</h2>
+      <p class="mt-1 text-sm leading-6 text-gray-600">TODO：添加描述</p>
+    </div>
+
+    <div class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
+      <%= render partial: "preview", locals: { resume: @resume } %>
       <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
-        <button type="button" class="text-sm font-semibold leading-6 text-gray-900">下一步</button>
-        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">匹配</button>
+        <button type="button" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">下载简历</button>
       </div>
-    </form>
+    </div>
   </div>
 </div>
