chore(resumes): implementing resume list

--- a/app/views/layouts/_app.html.erb
+++ b/app/views/layouts/_app.html.erb
@@ -10,7 +10,8 @@
             <div class="hidden md:block">
               <div class="ml-10 flex items-baseline space-x-4">
                 <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                <a href="#" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">简历汪汪</a>
+                <a href="<%= root_path %>" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">优化简历</a>
+                <a href="<%= resumes_path %>" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">我的简历</a>
               </div>
             </div>
           </div>
@@ -47,8 +48,8 @@
     <div class="border-b border-gray-700 md:hidden" id="mobile-menu">
       <div class="space-y-1 px-2 py-3 sm:px-3">
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-        <a href="#" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">简历汪汪
-        </a>
+        <a href="<%= root_path %>" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">优化简历</a>
+        <a href="<%= resumes_path %>" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">我的简历</a>
       </div>
     </div>
   </nav>
