--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,33 +29,33 @@
   <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
     <%= form_with model: User.new, url: users_path, local: true, class: "space-y-6" do |form| %>
       <div>
-        <%= form.label :phone_number, "手机号", class: "block text-sm font-medium text-gray-900" %>
+        <%= form.label :phone_number, "汪汪帐号", class: "block text-sm font-medium text-gray-900" %>
         <%= form.telephone_field :phone_number,
                                  pattern: "\\d{11}",
-                                 placeholder: "请输入你的手机号",
-                                 title: "手机号必须是11位数字",
+                                 placeholder: "汪~请输入你的电话号码",
+                                 title: "电话号码得是11位数字哦",
                                  autocomplete: "tel-national",
                                  required: true,
                                  class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" %>
       </div>
 
       <div>
-        <%= form.label :password, "密码", class: "block text-sm font-medium text-gray-900" %>
+        <%= form.label :password, "秘密狗窝密码", class: "block text-sm font-medium text-gray-900" %>
         <%= form.password_field :password,
-                                placeholder: "至少8字符，包含数字",
+                                placeholder: "不少于8个字符哦，记得藏点数字在里面",
                                 pattern: "(?=.*\\d).{8,}",
-                                title: "密码必须至少包含8个字符，且至少包含一个数字",
+                                title: "密码得至少8个字符长，还得至少有一个数字",
                                 autocomplete: "new-password",
                                 required: true,
                                 class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" %>
       </div>
 
       <div>
-        <%= form.label :password_confirmation, "确认密码", class: "block text-sm font-medium text-gray-900" %>
+        <%= form.label :password_confirmation, "再确认一次密码", class: "block text-sm font-medium text-gray-900" %>
         <%= form.password_field :password_confirmation,
-                                placeholder: "重复密码",
+                                placeholder: "再次输入密码，保证安全哦",
                                 pattern: "(?=.*\\d).{8,}",
-                                title: "确认密码必须与密码相匹配，且符合安全要求",
+                                title: "确认密码得和之前的密码匹配哦",
                                 autocomplete: "new-password",
                                 required: true,
                                 class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" %>
@@ -67,8 +67,8 @@
     <% end %>
 
     <p class="mt-6 text-center text-sm text-gray-500">
-      已经是产品汪汪的用户？
-      <%= link_to "登录", new_session_path, class: "font-medium text-indigo-600 hover:text-indigo-500" %>
+      已经是汪汪家族的一员了？
+      <%= link_to "快速登录", new_session_path, class: "font-medium text-indigo-600 hover:text-indigo-500" %>
     </p>
   </div>
 </div>
